Added java docs to make code readable
Signed-off-by: Navneet Verma <navneev@amazon.com>